--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Addapter.ProductAdapter"
+            android:name=".ProductAdapter"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
